fixed mobile nav spacing

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -150,11 +150,13 @@ header {
 }
 
 .nav {
-  padding:4rem;
+  padding:2rem 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  @media (min-width:$mid) {
+    padding:4rem;
+  }
   a:link,
   a:visited {
 
